initial angular index showing categories

--- a/rumbleApp/app/views/home/index.html.erb
+++ b/rumbleApp/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-<h1>coming soon!</h1>
+
+<div ng-app="rumbleApp">
+
+  <div ng-controller="MainController">
+  
+    <h1>Categories</h1>
+    <h3 ng-repeat="category in categories">
+      {{category.name}}
+    </h3>
+
+  </div>
+
+</div>
