--- a/rumbleApp/app/assets/stylesheets/home.css.scss
+++ b/rumbleApp/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#graph {
+	width: 500px;
+	height: 500px;
+	border: 1px solid black
+}
