--- a/rumbleApp/app/views/layouts/application.html.erb
+++ b/rumbleApp/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>RumbleApp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+ <!--  <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.6/css/foundation.min.css'> -->
   <%= csrf_meta_tags %>
 </head>
 <body>
