--- a/rumbleApp/app/views/home/index.html.erb
+++ b/rumbleApp/app/views/home/index.html.erb
@@ -1,21 +1,31 @@
 <div ng-app="rumbleApp">
   <div ng-controller="MainController" ng-init="graphScores()">
    <!-- ng-init="graphScores()" -->
+
     <div class="container">
 
       <div class="header">
+        <span class="cat-header">CATEGORIES</span>
         <li class="categories" name='selectCategory' ng-repeat="category in categories" ng-click='getScales(category)'>
-            {{category.name}}
+            {{category.name | uppercase}}
         </li>
       </div>
 
       <div class="main-div">
+
         <div class="graph-container">
           <div class="label-xplus">{{x.positive}}</div>
           <div class="label-xneg">{{x.negative}}</div>
           <div class="label-yplus">{{y.positive}}</div>
           <div id="graph"></div>
           <div class="label-yneg">{{y.negative}}</div>
+          <div class="label-yplus">ENTERTAINING</div>
+          <div class="label-x scales active">SCALE X LABEL</div>
+          <div class="label-xneg">USELESS</div>
+          <div class="label-xplus">USEFUL</div>
+          <div id="graph"></div>
+          <div class="label-yneg">BORING</div>
+          <div class="label-y scales active">SCALE Y LABEL</div>
         </div>
 
 
@@ -24,18 +34,38 @@
             <p>Scale 1</p>
             <select name='scale1' size='5' MULTIPLE ng-change='' ng-model='x'>
               <option ng-repeat='scale in scales' ng-value='scale'>
+          <div class="random" ng-click="graphScores()">
+            RANDOMIZE
+          </div>
+          
+          <span class="scale-header">SCALE 1</span>
+            <li class="scales" ng-repeat="scale in scales" ng-value="scale.id">
+                {{scale.name | uppercase}}
+            </li>
+            <li class="scales active">SCALE SELECTED</li>
+          <br><br>
+          <span class="scale-header">SCALE 2</span>
+            <li class="scales" ng-repeat="scale in scales" ng-value="scale.id">
+                {{scale.name | uppercase}}
+            </li>
+            <li class="scales active">SCALE SELECTED</li>
+          <!-- <div class="scale1">
+            <p>SCALE 1</p>
+            <select name='scale1' size='5' MULTIPLE>
+              <option ng-repeat='scale in scales' ng-value='scale.id'>
                 {{scale.name}}
               </option>
             </select>
           </div>
           <div class="scale2">
-            <p>Scale 2</p>
+            <p>SCALE 2</p>
             <select name='scale2' size='5' MULTIPLE>
               <option ng-repeat='scale in scales' ng-value='scale'>
                 {{scale.name}}
               </option>
             </select>
-          </div>
+          </div> -->
+
 
           <div class="random" ng-click="graphScores()">
             RANDOMIZE
@@ -45,12 +75,20 @@
               {{entity.name}}
             </li>
           </div>
+            <div class="entities">
+              <span class="scale-header">COMPANIES</span>
+              <li class="scales active">SHOW ALL</li>
+              <li class="scales" ng-repeat="entity in entities">
+                {{entity.name }}
+              </li>
+              <li class="scales">CLEAR ALL</li>
+            </div>
         </div>
         <div class="clear"></div>
       </div> <!-- main -->
 
     </div>
-    <div class="entity-score">
+<!--     <div class="entity-score">
       <li ng-repeat="score in entityScore">
         ({{score.x.score}}, {{score.y.score}}), out of {{score.x.total}}
       </li>
@@ -59,7 +97,7 @@
       <li ng-repeat="score in entityScoreR">
         ({{score.x.score}}, {{score.y.score}}), out of {{score.x.total}}
       </li>
-    </div>
+    </div> -->
   </div> <!-- mainController -->
 </div>
 
