--- a/rumbleApp/app/views/layouts/application.html.erb
+++ b/rumbleApp/app/views/layouts/application.html.erb
@@ -2,14 +2,35 @@
 <html>
 <head>
   <title>RumbleApp</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700|PT+Sans:400,700|Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
- <!--  <link rel='stylesheet' type='text/css' href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.6/css/foundation.min.css'> -->
+  <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/foundation/5.4.6/css/foundation.min.css'>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="about">
+    <%= image_tag("rumblelogo.png", height: "15", :class => "rumblelogo") %>
+    <span class="team-info">VOTE FOR US</span>
+  </div>
 
 <%= yield %>
+
+<script type="text/javascript">
+  var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
+  rumbleBannerBackgroundColor = "#161616";
+  rumbleBannerTextColor = "#b0b0b0";
+  rumbleBannerLinkColor = "#ffffff";
+  rumbleBannerPlacement = "bottom"; // Optionally replace with "bottom".
+</script>
+<script src="http://s0.railsrumble.com/banner-2014.js" type="text/javascript"></script>
+<div id="rumble2014" style="position: fixed; display: block; width: 100%; z-index: 99999; bottom: 0px; left: 0px; padding: 10px 0px; text-align: center; margin: 0px; color: rgb(176, 176, 176); background-color: rgb(22, 22, 22);"><span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
+in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span><span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span></div>
+<span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
+in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span>
+<span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span>
 
 </body>
 </html>
