--- a/rumbleApp/app/views/layouts/application.html.erb
+++ b/rumbleApp/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="about">
+  <div class="about"></div>
+<!--   <div class="about">
     <%= image_tag("rumblelogo.png", height: "15", :class => "rumblelogo") %>
     <span class="team-info">VOTE FOR US</span>
-  </div>
+  </div> -->
 
 <%= yield %>
 
