--- a/rumbleApp/app/views/home/index.html.erb
+++ b/rumbleApp/app/views/home/index.html.erb
@@ -19,8 +19,8 @@
           <div class="label-yplus">{{y.positive}}</div>
           <div id="graph"></div>
           <div class="label-yneg">{{y.negative}}</div>
-          <div class="label-x scales active">SCALE X LABEL</div>
-          <div class="label-y scales active">SCALE Y LABEL</div>
+          <!-- <div class="label-x scales active">{{x.name | uppercase}}</div> -->
+          <!-- <div class="label-y scales active">{{y.name | uppercase}}</div> -->
         </div>
 
 
@@ -46,14 +46,14 @@
             </li>
             <li class="scales active">SCALE SELECTED</li>
 
-            <div class="entities">
+            <!-- <div class="entities">
               <span class="scale-header">COMPANIES</span>
               <li class="scales active">SHOW ALL</li>
               <li class="scales" ng-repeat="entity in entities">
                 {{entity.name }}
               </li>
               <li class="scales">CLEAR ALL</li>
-            </div>
+            </div> -->
         </div>
         <div class="clear"></div>
       </div> <!-- main -->
