--- a/rumbleApp/app/views/layouts/application.html.erb
+++ b/rumbleApp/app/views/layouts/application.html.erb
@@ -27,11 +27,14 @@
   rumbleBannerPlacement = "bottom"; // Optionally replace with "bottom".
 </script>
 <script src="http://s0.railsrumble.com/banner-2014.js" type="text/javascript"></script>
-<div id="rumble2014" style="position: fixed; display: block; width: 100%; z-index: 99999; bottom: 0px; left: 0px; padding: 10px 0px; text-align: center; margin: 0px; color: rgb(176, 176, 176); background-color: rgb(22, 22, 22);"><span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
-in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span><span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span></div>
-<span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
+<div id="rumble2014" style="position: fixed; display: block; width: 100%; z-index: 99999; bottom: 0px; left: 0px; padding: 10px 0px; text-align: center; margin: 0px; color: rgb(176, 176, 176); background-color: rgb(22, 22, 22);">
+  <span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
+in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span><span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span>
+</div>
+
+<!-- <span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
 in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span>
-<span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span>
+<span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;"></span> -->
 
 </body>
 </html>
