--- a/rumbleApp/app/assets/stylesheets/home.css.scss
+++ b/rumbleApp/app/assets/stylesheets/home.css.scss
@@ -8,7 +8,7 @@
 }
 
 .rumblelogo {
-  margin: 0 20px;
+  /*margin: 0 20px;*/
 }
 
 html {
@@ -27,13 +27,12 @@ body {
   text-align: center;
 }
 
-.railsrumble,
 .about {
   background: #000;
   color: #fff;
-  padding: 10px;
+  /*padding: 10px;*/
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 10px;  
   letter-spacing: 1px;
   text-align: left;
 }
@@ -44,14 +43,6 @@ body {
   border: 2px solid #eee;
   padding: 10px;
   margin: 0 20px;
-}
-
-.railsrumble {
-  opacity: 0.5;
-  height: 30px;
-/*  position: absolute;
-  bottom: 0;
-  left: 0;*/
 }
 
 .main-div {
@@ -79,7 +70,7 @@ body {
   padding: 5px 40px;
   background: #3347af;
   color: #fff;
-  font-size: 26px;
+  font-size: 22px;
   letter-spacing: 2px;
   margin-right: 5px;
   margin-bottom: 5px;
@@ -114,7 +105,7 @@ body {
   background: #eeedef;
   background-image: url('gray4.jpg');
   width: 800px;
-  height: 620px;
+  height: 600px;
   border: 1px solid #ddd;
   float: left;
   position: relative;
@@ -154,6 +145,7 @@ body {
   background: #eeedef;
   background-image: url('gray4.jpg');
   width: 300px;
+  height: 600px;
   border: 1px solid #ddd;
   float: left;
   margin-left: 20px;
@@ -188,6 +180,7 @@ select {
   color: #fff;
   padding: 10px;
   margin: 20px 0;
+  font-size: 30px;
   letter-spacing: 1px
 }
 
@@ -207,13 +200,13 @@ select {
 
 .lable-xneg,
 .label-x {
-  position: absolute;
-  left: -40px;
-  top: 47%;
   -webkit-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
   -o-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg);
   margin: 0;
+  position: absolute;
+  left: -40px;
+  top: 47%;
 }
