--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,6 @@
 </head>
 <body>
   <div class="about"></div>
-<!--   <div class="about">
-    <%= image_tag("rumblelogo.png", height: "15", :class => "rumblelogo") %>
-    <span class="team-info">VOTE FOR US</span>
-  </div> -->
 
 <%= yield %>
 
@@ -28,10 +24,12 @@
 </script>
 <script src="http://s0.railsrumble.com/banner-2014.js" type="text/javascript"></script>
 <div id="rumble2014" style="position: fixed; display: block; width: 100%; z-index: 99999; bottom: 0px; left: 0px; padding: 10px 0px; text-align: center; margin: 0px; color: rgb(176, 176, 176); background-color: rgb(22, 22, 22);">
-  <span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
+Created in 48 hours during <a href="http://railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">Rails Rumble Hackathon</a>
+
+<!--   <span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
 in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span><span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;">x</span>
 </div>
-
+ -->
 <!-- <span>You can <a href="http://railsrumble.com/?view=http://newdimensions.r14.railsrumble.com/" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">vote for us</a>
 in the <a href="http://railsrumble.com/entries/286-untitled" style="color: rgb(255, 255, 255); font-weight: bolder; text-decoration: none;">2014 Rails Rumble</a>!</span>
 <span id="rumbleCloseButton" style="position: absolute; right: 8px; cursor: pointer; top: 8px;"></span> -->
